fix spacing

--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -38,6 +38,6 @@
 }
 
 .dropdown-company {
-	width: calc(100% + 1rem);
+	width: calc(100% + 1.5rem);
 	padding: 1rem;
 }
